# libnfsidmap

./: .gitignore  BUILDING_FROM_CVS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  configure.in  gums.c  idmapd.conf  idmapd.conf.5  libnfsidmap.c  libtest.c  mkinstalldirs  nfs4_uid_to_name.3  nfsidmap.h  nfsidmap.map  nfsidmap_internal.h  nss.c  project.config  static.c  umich_ldap.c
debian/: README.Debian  changelog  control  copyright  files  libnfsidmap-default.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex
